<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_blue_grey_700">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/activity_vertical_margin">
        <ProgressBar
            android:id="@+id/disp_progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"/>

        <Spinner
            android:id="@+id/disp_prof_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:dropDownWidth="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/horas_asignadas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/disp_horas_asig"
                    android:text="0"
                    android:focusable="false"
                    android:enabled="false"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/horas_restantes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/disp_horas_rest"
                    android:text="0"
                    android:focusable="false"
                    android:enabled="false"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <android.support.v7.widget.GridLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:columnCount="2"
            app:useDefaultMargins="true"
            app:alignmentMode="alignBounds"
            app:rowOrderPreserved="false">
            <android.support.v7.widget.AppCompatButton
                app:layout_column="0"
                app:layout_columnSpan="1"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal"
                android:id="@+id/btn_lunes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/dia_lunes"
                android:drawableEnd="@android:drawable/ic_input_add"
                android:theme="@style/BtnSignIn"
                android:textColor="#ffffff"
                android:textAllCaps="false"/>
            <android.support.v7.widget.AppCompatButton
                app:layout_column="1"
                app:layout_columnSpan="1"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal"
                android:id="@+id/btn_martes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/dia_martes"
                android:drawableEnd="@android:drawable/ic_input_add"
                android:theme="@style/BtnSignIn"
                android:textColor="#ffffff"
                android:textAllCaps="false"/>
            <android.support.v7.widget.AppCompatButton
                app:layout_column="0"
                app:layout_columnSpan="1"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal"
                android:id="@+id/btn_miercoles"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/dia_miercoles"
                android:drawableEnd="@android:drawable/ic_input_add"
                android:theme="@style/BtnSignIn"
                android:textColor="#ffffff"
                android:textAllCaps="false"/>
            <android.support.v7.widget.AppCompatButton
                app:layout_column="1"
                app:layout_columnSpan="1"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal"
                android:id="@+id/btn_jueves"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/dia_jueves"
                android:drawableEnd="@android:drawable/ic_input_add"
                android:theme="@style/BtnSignIn"
                android:textColor="#ffffff"
                android:textAllCaps="false"/>
            <android.support.v7.widget.AppCompatButton
                app:layout_column="0"
                app:layout_columnSpan="1"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal"
                android:id="@+id/btn_viernes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/dia_viernes"
                android:drawableEnd="@android:drawable/ic_input_add"
                android:theme="@style/BtnSignIn"
                android:textColor="#ffffff"
                android:textAllCaps="false"/>
            <android.support.v7.widget.AppCompatButton
                app:layout_column="1"
                app:layout_columnSpan="1"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal"
                android:id="@+id/btn_sabado"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/dia_sabado"
                android:drawableEnd="@android:drawable/ic_input_add"
                android:theme="@style/BtnSignIn"
                android:textColor="#ffffff"
                android:textAllCaps="false"/>
        </android.support.v7.widget.GridLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnGuardarCambios"
            android:text="@string/disp_guardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/BtnHomeFrament"
            android:padding="16dp"
            android:layout_marginBottom="16dp"
            android:textAllCaps="false"/>
    </LinearLayout>
</ScrollView>