<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/editardb_details_common_toolbar" />

        <include layout="@layout/editardb_details_common_progress_bar" />

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/md_grey_800"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/md_grey_700"
                app:cardCornerRadius="10dp"
                app:cardElevation="15dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true"
                app:contentPadding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/materia_details_codigo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/materia_codigo"
                            android:inputType="numberSigned"
                            android:maxLength="5"
                            app:validateEmpty="@{true}"
                            app:validateEmptyAutoDismiss="@{true}"
                            app:validateMaxLength="@{5}"
                            app:validateMaxLengthAutoDismiss="@{true}"
                            app:validateMinLength="@{5}"
                            app:validateMinLengthAutoDismiss="@{true}" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/materia_details_nombre"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/materia_nombre"
                            android:inputType="text"
                            android:maxLength="35"
                            app:validateEmpty="@{true}"
                            app:validateEmptyAutoDismiss="@{true}"
                            app:validateMaxLength="@{35}"
                            app:validateMaxLengthAutoDismiss="@{true}"
                            app:validateMinLength="@{8}"
                            app:validateMinLengthAutoDismiss="@{true}" />
                    </android.support.design.widget.TextInputLayout>

                    <Spinner
                        android:id="@+id/materia_details_carreras_dropdown"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:animateLayoutChanges="true"
                        android:checkedButton="@android:id/button2"
                        android:dropDownWidth="match_parent"
                        android:popupBackground="@color/md_grey_850"
                        android:scrollbars="vertical"
                        android:spinnerMode="dropdown" />

                    <android.support.v4.widget.Space
                        android:layout_width="match_parent"
                        android:layout_height="20dp" />

                    <Spinner
                        android:id="@+id/materia_details_semestres_dropdown"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:dropDownWidth="match_parent"
                        android:popupBackground="@color/md_grey_850"
                        android:spinnerMode="dropdown" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/materia_details_horas_totales"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/materia_horas_totales"
                            android:inputType="numberSigned"
                            android:maxLength="2"
                            app:validateEmpty="@{true}"
                            app:validateEmptyAutoDismiss="@{true}"
                            app:validateMaxLength="@{2}"
                            app:validateMaxLengthAutoDismiss="@{true}"
                            app:validateMinLength="@{1}"
                            app:validateMinLengthAutoDismiss="@{true}" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/materia_details_horas_semanales"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/materia_horas_semanales"
                            android:inputType="text"
                            android:maxLength="2"
                            app:validateEmpty="@{true}"
                            app:validateEmptyAutoDismiss="@{true}"
                            app:validateMaxLength="@{2}"
                            app:validateMaxLengthAutoDismiss="@{true}"
                            app:validateMinLength="@{1}"
                            app:validateMinLengthAutoDismiss="@{true}" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.v4.widget.Space
                        android:layout_width="match_parent"
                        android:layout_height="20dp" />

                    <Spinner
                        android:id="@+id/materia_details_tipo_dropdown"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:dropDownWidth="match_parent"
                        android:popupBackground="@color/md_grey_850"
                        android:spinnerMode="dropdown" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>
</layout>